Actions
Bug #10708
closedpmcs: NULL pointer errors
Start date:
2019-04-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
NULL pointer errors:
../../../../src/uts/common/io/scsi/adapters/pmcs/pmcs_attach.c:770:28: error: comparison between pointer and integer [-Werror] if (pwp->flash_chunk_addr == NULL) { ^~ ../../../../src/uts/common/io/scsi/adapters/pmcs/pmcs_scsa.c: In function 'pmcs_scsa_wq_run_one': ../../../../src/uts/common/io/scsi/adapters/pmcs/pmcs_scsa.c:1643:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] sp->cmd_tag = NULL; ^ ../../../../src/uts/common/io/scsi/adapters/pmcs/pmcs_scsa.c:1658:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] sp->cmd_tag = NULL; ^ ../../../../src/uts/common/io/scsi/adapters/pmcs/pmcs_scsa.c: In function 'pmcs_SAS_run': ../../../../src/uts/common/io/scsi/adapters/pmcs/pmcs_scsa.c:1909:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] sp->cmd_tag = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b46556d07aa5469d61a8b3e3067bb7c3c26f0a7c
commit b46556d07aa5469d61a8b3e3067bb7c3c26f0a7c Author: Toomas Soome <tsoome@me.com> Date: 2019-04-18T05:23:58.000Z 10708 pmcs: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions